Fixing bug 235041. Adding nsAdoptingString, a string class that can be returned by value from functions returning malloc'ed strings, w/o the overhead of extra string copying/mallocs. r=dbaron@dbaron.org, sr=darin@meer.net